apps/web/src/app/(docs)/docs/sdk-reference/cli/v2.8.0/sandbox/page.mdx
## vdesk sandbox


work with sandboxes

### Usage

```bash
vdesk sandbox [options] [command]
```
## vdesk sandbox connect


connect terminal to already running sandbox

### Usage

```bash
vdesk sandbox connect [options] <sandboxID>
```


## vdesk sandbox list


list all sandboxes, by default it list only running ones

### Usage

```bash
vdesk sandbox list [options]
```

### Options


 - `-s, --state <state>: filter by state, eg. running, paused. Defaults to running `
 - `-m, --metadata <metadata>: filter by metadata, eg. key1=value1 `
 - `-l, --limit <limit>: limit the number of sandboxes returned `
 - `-f, --format <format>: output format, eg. json, pretty `


## vdesk sandbox kill


kill sandbox

### Usage

```bash
vdesk sandbox kill [options] [sandboxIDs...]
```

### Options


 - `-a, --all: kill all sandboxes `
 - `-s, --state <state>: when used with -a/--all flag, filter by state, eg. running, paused. Defaults to running `
 - `-m, --metadata <metadata>: when used with -a/--all flag, filter by metadata, eg. key1=value1 `


## vdesk sandbox pause


pause sandbox

### Usage

```bash
vdesk sandbox pause [options] <sandboxID>
```


## vdesk sandbox resume


resume paused sandbox

### Usage

```bash
vdesk sandbox resume [options] <sandboxID>
```


## vdesk sandbox create


create sandbox and connect terminal to it

### Usage

```bash
vdesk sandbox create [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <vdesk-toml>: specify path to the VDESKSK config toml. By defaulVDESKDESK tries to find ./vdesk.toml in root directory. We recommend using the new build system (https://vdesk.dev/docs/template/defining-template) that does not use config files. `
 - `-d, --detach: create sandbox without connecting terminal to it `


## vdesk sandbox spawn


create sandbox and connect terminal to it

### Usage

```bash
vdesk sandbox spawn [options] [template]
```

### Options


 - `-p, --path <path>: change root directory where command is executed to <path> directory `
 - `--config <vdesk-toml>: specify path to the VDESKSK config toml. By defaulVDESKDESK tries to find ./vdesk.toml in root directory. We recommend using the new build system (https://vdesk.dev/docs/template/defining-template) that does not use config files. `
 - `-d, --detach: create sandbox without connecting terminal to it `


## vdesk sandbox logs


show logs for sandbox

### Usage

```bash
vdesk sandbox logs [options] <sandboxID>
```

### Options


 - `--level <level>: filter logs by level (DEBUG, INFO, WARN, ERROR). The logs with the higher levels will be also shown. [default: INFO]`
 - `-f, --follow: keep streaming logs until the sandbox is closed `
 - `--format <format>: specify format for printing logs (json, pretty) [default: pretty]`
 - `--loggers [loggers]: filter logs by loggers. Specify multiple loggers by separating them with a comma. `


## vdesk sandbox metrics


show metrics for sandbox

### Usage

```bash
vdesk sandbox metrics [options] <sandboxID>
```

### Options


 - `-f, --follow: keep streaming metrics until the sandbox is closed `
 - `--format <format>: specify format for printing metrics (json, pretty) [default: pretty]`


## vdesk sandbox exec


execute a command in a running sandbox

### Usage

```bash
vdesk sandbox exec [options] <sandboxID> <command...>
```

### Options


 - `-b, --background: run in background and return immediately `
 - `-c, --cwd <dir>: working directory `
 - `-u, --user <user>: run as specified user `
 - `-e, --env <KEY=VALUE>: set environment variable (repeatable) [default: [object Object]]`


